fixed some overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -132,7 +132,7 @@ nav {
     hsl(30, 100%, 60%)
   );
   border-radius: 9px;
-  opacity: 0.6;
+  opacity: 0.9;
 }
 
 .sunIconContainer {
@@ -209,7 +209,7 @@ nav {
 .swiper-wrapper {
   max-width: 300px;
   display: flex;
-  overflow: scroll;
+  overflow-x: scroll;
   gap: 0.3rem;
   padding: 1rem;
 }
@@ -251,6 +251,12 @@ nav {
   max-height: 12px;
 }
 
+.dayCard *img {
+  min-width: 8px;
+  min-height: 8px;
+  max-width: 12px;
+  max-height: 12px;
+}
 .iconContainer img {
   min-width: 30px;
   min-height: 30px;
